2A/05_Projet_GL/src/test/deca/context/invalid/complet/89_new_void.deca
// Description :
//   new avec int 
// Resultats :
//    ligne 14 : Le type attendu doit être un type de classe
// Historique :
//  cree le 18/01/2024

class A {

}

{
    
    A a = new void();

}